--- a/styles.css
+++ b/styles.css
@@ -473,4 +473,7 @@ main{
         margin-inline: auto;
         padding-inline: 0;
     }
+    .mail-link::after {
+        display: none;
+    }
 }
