--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 :root{
+    /* defining variables to toggle visibility of tooltips on hovering over slider */
     --visibility1: none;
     --visibility2: none;
     --visibility3: none;
 }
 
-html {
+html { 
     scrollbar-width: thin;
     scrollbar-color: hsl(240,5%,5%) hsl(180, 4%, 19%);
-    overflow-x: hidden;
 }
 
 body {
@@ -18,8 +18,10 @@ body {
   margin: 0;
 }
 
+/* Header styling */
+
 header {
-  position: fixed;
+  position: fixed; 
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -90,6 +92,8 @@ main{
     padding-top: 50px;
 }
 
+/* Introduction/Hero Section styling */
+
 .intro-content{
     font-size: 60px;
     height: 100vh;
@@ -103,7 +107,6 @@ main{
     width: 70%;
     text-align: center;
     transition: color 0.3s;
-    /* margin-left: 5%; */
 }
 
 .intro:hover{
@@ -117,6 +120,8 @@ main{
     border-radius: 20px;
     margin-bottom: 20px;
 }
+
+/* About section styling */
 
 .about-content{
     display: flex;
@@ -149,6 +154,8 @@ main{
     color: orangered;
     cursor: none;
 }
+
+/* Portfolio and Slider section styling */
 
 .portfolio-content{
     height: 100vh;
@@ -267,6 +274,8 @@ main{
     --visibility3: auto;
 }
 
+/* Contact section styling */
+
 .contact-content{
     height: 100vh;
     display: flex;
@@ -287,7 +296,6 @@ main{
 }
 
 .contact-form{
-    /* margin-top: 6vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -345,6 +353,8 @@ main{
     padding: 9px 19px;
 }
 
+/* Footer Styles */
+
 #foot {
     border-top: 0.1px solid rgba(255,255,255,0.5);
     box-shadow: 0px 0px 3px rgba(255,255,255,0.5);
@@ -399,6 +409,8 @@ main{
   width: 50%;
   left: 29%;
 }
+
+/* responsiveness */
 
 @media (min-width: 501px) and (max-width: 780px){
     #about{
