--- a/styles.css
+++ b/styles.css
@@ -215,19 +215,25 @@ main{
 
 .slider-nav{
     display: flex;
+    justify-content: space-between;
     column-gap: 1rem;
     position: absolute;
-    bottom: 1rem;
+    bottom: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    width: 90%;
+    /* transform: translateX(-50%); */
+    transform: translate(-50%);
     z-index: 100;
 }
 
 .slider-nav a{
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
-    background-color: black;
+    /* background-color: rgba(255,255,255,0.5); */
+    font-size: 25px;
+    color: orangered;
+    text-decoration: none;
     opacity: 0.75;
     transition: opacity ease 0.25s;
 }
